add back 12 months

--- a/web/src/locales/da.json
+++ b/web/src/locales/da.json
@@ -217,11 +217,13 @@
     "title": {
       "72h": "Timevis data for:",
       "3mo": "Daglig data for:",
+      "12mo": "Månedlig data for:",
       "all_months": "Månedlig data for:",
       "all_years": "Årlig data for:"
     },
     "3mo": "daglig",
     "72h": "timevis",
+    "12mo": "månedlig",
     "all_months": "månedlig",
     "all_years": "årlig"
   },
@@ -244,48 +246,56 @@
     "carbonintensity": {
       "72h": "Timevis CO₂-intensitet",
       "3mo": "Daglig CO₂-intensitet",
+      "12mo": "Månedlig CO₂-intensitet",
       "all_months": "Månedlig CO₂-intensitet",
       "all_years": "Årlig CO₂-intensitet"
     },
     "emissions": {
       "72h": "Timevis CO₂-udledninger",
       "3mo": "Daglig CO₂-udledninger",
+      "12mo": "Månedlig CO₂-udledninger",
       "all_months": "Månedlig CO₂-udledninger",
       "all_years": "Årlig CO₂-udledninger"
     },
     "emissionsorigin": {
       "72h": "Timevis CO₂-udlednings oprindelse",
       "3mo": "Daglig CO₂-udlednings oprindelse",
+      "12mo": "Månedlig CO₂-udlednings oprindelse",
       "all_months": "Månedlig CO₂-udlednings oprindelse",
       "all_years": "Årlig CO₂-udlednings oprindelse"
     },
     "emissionsproduction": {
       "72h": "Timevis elproduktions udledning",
       "3mo": "Daglig elproduktions udledning",
+      "12mo": "Månedlig elproduktions udledning",
       "all_months": "Månedlig elproduktions udledning",
       "all_years": "Årlig elproduktions udledning"
     },
     "electricityorigin": {
       "72h": "Timevis elektricitets oprindelse",
       "3mo": "Daglig elektricitets oprindelse",
+      "12mo": "Månedlig elektricitets oprindelse",
       "all_months": "Månedlig elektricitets oprindelse",
       "all_years": "Årlig elektricitets oprindelse"
     },
     "electricityproduction": {
       "72h": "Timevis elektricitets produktion",
       "3mo": "Daglig elektricitets produktion",
+      "12mo": "Månedlig elektricitets produktion",
       "all_months": "Månedlig elektricitets produktion",
       "all_years": "Årlig elektricitets produktion"
     },
     "electricityprices": {
       "72h": "Timevise elektricitets priser",
       "3mo": "Daglige elektricitets priser",
+      "12mo": "Månedlige elektricitets priser",
       "all_months": "Månedlige elektricitets priser",
       "all_years": "Årlige elektricitets priser"
     },
     "netExchange": {
       "72h": "Timevis nettoudveksling",
       "3mo": "Daglig nettoudveksling",
+      "12mo": "Månedlig nettoudveksling",
       "all_months": "Månedlig nettoudveksling",
       "all_years": "Årlig nettoudveksling"
     },
