--- a/web/src/locales/de.json
+++ b/web/src/locales/de.json
@@ -78,11 +78,13 @@
     "title": {
       "72h": "Stündliche Daten für:",
       "3mo": "Tägliche Daten für:",
+      "12mo": "Monatliche Daten für:",
       "all_months": "Monatliche Daten für:",
       "all_years": "Jährliche Daten für:"
     },
     "3mo": "täglich",
     "72h": "stündlich",
+    "12mo": "monatlich",
     "all_months": "monatlich",
     "all_years": "jährlich"
   },
