--- a/web/src/locales/ru.json
+++ b/web/src/locales/ru.json
@@ -17,6 +17,7 @@
   },
   "time-controller": {
     "3mo": "по дням",
+    "12mo": "по месяцам",
     "all_months": "по месяцам",
     "all_years": "по годам"
   },
