--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -155,10 +155,12 @@
   "time-controller": {
     "title": {
       "3mo": "Datos diarios para:",
+      "12mo": "Datos mensuales para:",
       "all_months": "Datos mensuales para:",
       "all_years": "Datos anuales para:"
     },
     "3mo": "diario",
+    "12mo": "mensual",
     "all_months": "mensual",
     "all_years": "anual"
   },
