--- a/web/src/locales/pt-PT.json
+++ b/web/src/locales/pt-PT.json
@@ -166,6 +166,7 @@
   "time-controller": {
     "3mo": "diários",
     "72h": "horários",
+    "12mo": "mensais",
     "all_months": "mensais",
     "all_years": "anuais"
   },
@@ -193,48 +194,56 @@
     "carbonintensity": {
       "72h": "Intensidade de carbono horária",
       "3mo": "Intensidade de carbono diária",
+      "12mo": "Intensidade de carbono mensal",
       "all_months": "Intensidade de carbono mensal",
       "all_years": "Intensidade de carbono anual"
     },
     "emissions": {
       "72h": "Emissões de carbono horárias",
       "3mo": "Emissões de carbono diárias",
+      "12mo": "Emissões de carbono mensais",
       "all_months": "Emissões de carbono mensais",
       "all_years": "Emissões de carbono anuais"
     },
     "emissionsorigin": {
       "72h": "Origem horária das emissões de carbono",
       "3mo": "Origem diária das emissões de carbono",
+      "12mo": "Origem mensal das emissões de carbono",
       "all_months": "Origem mensal das emissões de carbono",
       "all_years": "Origem anual das emissões de carbono"
     },
     "emissionsproduction": {
       "72h": "Emissões horárias de produção",
       "3mo": "Emissões diárias de produção",
+      "12mo": "Emissões mensais de produção",
       "all_months": "Emissões mensais de produção",
       "all_years": "Emissões anuais de produção"
     },
     "electricityorigin": {
       "72h": "Origem horária da eletricidade",
       "3mo": "Origem diária da eletricidade",
+      "12mo": "Origem mensal da eletricidade",
       "all_months": "Origem mensal da eletricidade",
       "all_years": "Origem anual da eletricidade"
     },
     "electricityproduction": {
       "72h": "Produção horária de eletricidade",
       "3mo": "Produção diária de eletricidade",
+      "12mo": "Produção mensal de eletricidade",
       "all_months": "Produção mensal de eletricidade",
       "all_years": "Produção anual de eletricidade"
     },
     "electricityprices": {
       "72h": "Preços horários da eletricidade",
       "3mo": "Preços diários da eletricidade",
+      "12mo": "Preços mensais da eletricidade",
       "all_months": "Preços mensais da eletricidade",
       "all_years": "Preços anuais da eletricidade"
     },
     "netExchange": {
       "72h": "Troca líquida horária",
       "3mo": "Troca líquida diária",
+      "12mo": "Troca líquida mensal",
       "all_months": "Troca líquida mensal",
       "all_years": "Troca líquida anual"
     },
