Vik/horizons update (#7697)
* remove 24h

* remove selected index analytics

* use v10 app-backend

* WIP

* skip weeks for now

* update time axis

* cleanup

* more cleanup

* keep single all and filter out the other

* intercept v10 backend in tests

* fix cypress tests

* fix URL

* fix tests

* fix url

* add back 12 months

* add backend mapping

* fix translations

* fix ranking panel links

* fix internal redirects

* add redirects for 24h->72h and 30d->3mo

--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -154,15 +154,15 @@
   },
   "time-controller": {
     "title": {
-      "24h": "Datos horarios para:",
-      "30d": "Datos diarios para:",
+      "3mo": "Datos diarios para:",
       "12mo": "Datos mensuales para:",
-      "all": "Datos anuales para:"
+      "all_months": "Datos mensuales para:",
+      "all_years": "Datos anuales para:"
     },
-    "30d": "diario",
-    "24h": "horario",
+    "3mo": "diario",
     "12mo": "mensual",
-    "all": "anual"
+    "all_months": "mensual",
+    "all_years": "anual"
   },
   "footer": {
     "foundbugs": "¿Has encontrado algún error o tienes alguna sugerencia? Cuéntanoslo",
