add some French translations (#7707)
* tranlate "methodologies-and-data-sources"

* add french translation for new time slider

* new features

* add french translation

* various french translations

* new feature popover french translation

* add some french translations

* french translations

* add some french translations

* french translations

---------

Co-authored-by: Viktor Andersson <30777521+VIKTORVAV99@users.noreply.github.com>

--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -6,8 +6,9 @@
     "share-app": "Partagez l'application:"
   },
   "button": {
-    "reddit-share": "Partagez sur Reddit",
+    "bluesky-share": "Vizualisez en temps réel les données mondiales sur les émissions d’électricité : {{baseUrl}}",
     "reddit": "Rejoignez r/electricitymaps",
+    "reddit-share": "Partagez sur Reddit",
     "github": "Contribuez sur GitHub",
     "twitter": "Suivez nous sur X (Twitter)",
     "twitter-share": "Partagez sur X (Twitter)",
@@ -18,7 +19,9 @@
     "feedback": "Partagez vos commentaires",
     "faq": "FAQ",
     "privacy-policy": "Politique de confidentialité",
-    "legal-notice": "Informations légales"
+    "legal-notice": "Informations légales",
+    "api": "Accéder à l'API",
+    "docs": "Documentation de l'API "
   },
   "settings-modal": {
     "title": "Paramètres"
@@ -238,14 +241,14 @@
     "72h": "72h",
     "3mo": "3mo",
     "12mo": "12mo",
-    "all_months": "12mo",
-    "all_years": "tout",
+    "all_months": "Tout",
+    "all_years": "Toutes les années",
     "historical-linking": {
       "3mo": "30j",
       "72h": "72h",
       "12mo": "12mo",
-      "all_months": "12mo",
-      "all_years": "tout"
+      "all_months": "Tout",
+      "all_years": "Toutes les années"
     },
     "date-unavailable": {
       "title": "Date indisponible",
