--- a/web/src/locales/cs.json
+++ b/web/src/locales/cs.json
@@ -306,6 +306,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
