--- a/web/src/locales/da.json
+++ b/web/src/locales/da.json
@@ -647,6 +647,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canada"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
