--- a/web/src/locales/de.json
+++ b/web/src/locales/de.json
@@ -434,6 +434,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
