--- a/web/src/locales/el.json
+++ b/web/src/locales/el.json
@@ -257,6 +257,9 @@
     "BZ": {
       "zoneName": "Μπελίζ"
     },
+    "CA": {
+      "zoneName": "Καναδάς"
+    },
     "CA-AB": {
       "countryName": "Καναδάς",
       "zoneName": "Alberta"
