--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -691,6 +691,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canada"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
