--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -491,6 +491,9 @@
     "BZ": {
       "zoneName": "Belice"
     },
+    "CA": {
+      "zoneName": "Canadá"
+    },
     "CA-AB": {
       "countryName": "Canadá",
       "zoneName": "Alberta"
