--- a/web/src/locales/fi.json
+++ b/web/src/locales/fi.json
@@ -308,6 +308,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
