--- a/web/src/locales/hr.json
+++ b/web/src/locales/hr.json
@@ -299,6 +299,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
