--- a/web/src/locales/id.json
+++ b/web/src/locales/id.json
@@ -305,6 +305,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
