--- a/web/src/locales/it.json
+++ b/web/src/locales/it.json
@@ -380,6 +380,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canada"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
