--- a/web/src/locales/ja.json
+++ b/web/src/locales/ja.json
@@ -309,6 +309,9 @@
     "BZ": {
       "zoneName": "ベリーズ"
     },
+    "CA": {
+      "zoneName": "カナダ"
+    },
     "CA-AB": {
       "countryName": "カナダ",
       "zoneName": "アルバータ州"
