--- a/web/src/locales/ko.json
+++ b/web/src/locales/ko.json
@@ -305,6 +305,9 @@
     "BZ": {
       "zoneName": "벨리즈"
     },
+    "CA": {
+      "zoneName": "캐나다"
+    },
     "CA-AB": {
       "countryName": "캐나다",
       "zoneName": "앨버타 주"
