--- a/web/src/locales/nl.json
+++ b/web/src/locales/nl.json
@@ -486,6 +486,10 @@
       "countryName": "Brazilië",
       "zoneName": "Zuid-Brazilië"
     },
+    "BR-SE": {
+      "countryName": "Brazilië",
+      "zoneName": "Zuidoost-Brazilië"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
