--- a/web/src/locales/no-NB.json
+++ b/web/src/locales/no-NB.json
@@ -409,6 +409,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canada"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
