--- a/web/src/locales/pl.json
+++ b/web/src/locales/pl.json
@@ -563,6 +563,9 @@
     "BY": {
       "zoneName": "Białoruś"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
