--- a/web/src/locales/pt-BR.json
+++ b/web/src/locales/pt-BR.json
@@ -332,6 +332,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canadá"
+    },
     "CA-AB": {
       "countryName": "Canadá",
       "zoneName": "Alberta"
