--- a/web/src/locales/pt-PT.json
+++ b/web/src/locales/pt-PT.json
@@ -578,6 +578,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canadá"
+    },
     "CA-AB": {
       "countryName": "Canadá",
       "zoneName": "Alberta"
