--- a/web/src/locales/ro.json
+++ b/web/src/locales/ro.json
@@ -343,6 +343,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canada"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
