--- a/web/src/locales/sl.json
+++ b/web/src/locales/sl.json
@@ -363,6 +363,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
