--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -618,6 +618,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
