--- a/web/src/locales/vi.json
+++ b/web/src/locales/vi.json
@@ -203,6 +203,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canada"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
