--- a/web/src/locales/zh-CN.json
+++ b/web/src/locales/zh-CN.json
@@ -259,6 +259,9 @@
     "BZ": {
       "zoneName": "伯利兹"
     },
+    "CA": {
+      "zoneName": "加拿大"
+    },
     "CA-AB": {
       "zoneName": "阿尔伯塔",
       "countryName": "加拿大"
