--- a/web/src/locales/zh-TW.json
+++ b/web/src/locales/zh-TW.json
@@ -530,6 +530,9 @@
     "BZ": {
       "zoneName": "貝里斯"
     },
+    "CA": {
+      "zoneName": "加拿大"
+    },
     "CA-AB": {
       "countryName": "加拿大",
       "zoneName": "亞伯達省"
