--- a/web/public/locales/en.json
+++ b/web/public/locales/en.json
@@ -172,6 +172,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canada"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
