--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -684,6 +684,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Canada"
+    },
     "CA-AB": {
       "countryName": "Canada",
       "zoneName": "Alberta"
