--- a/web/src/locales/ru.json
+++ b/web/src/locales/ru.json
@@ -230,6 +230,9 @@
     "BZ": {
       "zoneName": "Белиз"
     },
+    "CA": {
+      "zoneName": "Канада"
+    },
     "CA-AB": {
       "countryName": "Канада",
       "zoneName": "Альберта"
