--- a/web/src/locales/sk.json
+++ b/web/src/locales/sk.json
@@ -297,6 +297,9 @@
     "BZ": {
       "zoneName": "Belize"
     },
+    "CA": {
+      "zoneName": "Kanada"
+    },
     "CA-AB": {
       "countryName": "Kanada",
       "zoneName": "Alberta"
