--- a/web/public/locales/en.json
+++ b/web/public/locales/en.json
@@ -366,6 +366,14 @@
       "countryName": "Spain",
       "zoneName": "Fuerteventura/Lanzarote"
     },
+    "ES-CN-FV": {
+      "countryName": "Spain",
+      "zoneName": "Fuerteventura"
+    },
+    "ES-CN-LZ": {
+      "countryName": "Spain",
+      "zoneName": "Lanzarote"
+    },
     "ES-CN-GC": {
       "countryName": "Spain",
       "zoneName": "Gran Canaria"
