--- a/web/src/locales/no-NB.json
+++ b/web/src/locales/no-NB.json
@@ -583,9 +583,13 @@
       "countryName": "Spania",
       "zoneName": "Ceuta"
     },
-    "ES-CN-FVLZ": {
+    "ES-CN-FV": {
       "countryName": "Spania",
-      "zoneName": "Fuerteventura/Lanzarote"
+      "zoneName": "Fuerteventura"
+    },
+    "ES-CN-LZ": {
+      "countryName": "Spania",
+      "zoneName": "Lanzarote"
     },
     "ES-CN-GC": {
       "countryName": "Spania",
