--- a/web/src/locales/ja.json
+++ b/web/src/locales/ja.json
@@ -491,9 +491,13 @@
       "countryName": "スペイン",
       "zoneName": "メノルカ島"
     },
-    "ES-CN-FVLZ": {
+    "ES-CN-FV": {
       "countryName": "スペイン",
-      "zoneName": "フエルテベントゥラ島/ランサローテ島"
+      "zoneName": "フエルテベントゥラ島"
+    },
+    "ES-CN-LZ": {
+      "countryName": "スペイン",
+      "zoneName": "ランサローテ島"
     },
     "ES-CN-GC": {
       "countryName": "スペイン",
