--- a/web/src/locales/ru.json
+++ b/web/src/locales/ru.json
@@ -392,9 +392,13 @@
     "ES": {
       "zoneName": "Испания"
     },
-    "ES-CN-FVLZ": {
+    "ES-CN-FV": {
       "countryName": "Испания",
-      "zoneName": "Фуэртевентура / Лансароте"
+      "zoneName": "Фуэртевентура"
+    },
+    "ES-CN-LZ": {
+      "countryName": "Испания",
+      "zoneName": "Лансароте"
     },
     "ES-CN-GC": {
       "countryName": "Испания",
