--- a/web/src/locales/sl.json
+++ b/web/src/locales/sl.json
@@ -553,9 +553,13 @@
       "countryName": "Španija",
       "zoneName": "Menorca"
     },
-    "ES-CN-FVLZ": {
+    "ES-CN-FV": {
       "countryName": "Španija",
-      "zoneName": "Fuerteventura/Lanzarote"
+      "zoneName": "Fuerteventura"
+    },
+    "ES-CN-LZ": {
+      "countryName": "Španija",
+      "zoneName": "Lanzarote"
     },
     "ES-CN-GC": {
       "countryName": "Španija",
