--- a/web/src/locales/vi.json
+++ b/web/src/locales/vi.json
@@ -385,9 +385,13 @@
       "countryName": "Tây Ban Nha",
       "zoneName": "Menorca"
     },
-    "ES-CN-FVLZ": {
+    "ES-CN-FV": {
       "countryName": "Tây Ban Nha",
-      "zoneName": "Fuerteventura/Lanzarote"
+      "zoneName": "Fuerteventura"
+    },
+    "ES-CN-LZ": {
+      "countryName": "Tây Ban Nha",
+      "zoneName": "Lanzarote"
     },
     "ES-CN-GC": {
       "countryName": "Tây Ban Nha",
