--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -48,7 +48,7 @@
   },
   "more-options-dropdown": {
     "title": "Share",
-    "download": "Download data",
+    "download": "Download CSV",
     "chart-title": "Share chart",
     "zone-title": "Share zone",
     "mobile-share-via": "Share via",
