--- a/web/src/locales/da.json
+++ b/web/src/locales/da.json
@@ -1319,7 +1319,7 @@
       "zoneName": "Monaco"
     },
     "MD": {
-      "zoneName": "Moldavien"
+      "zoneName": "Moldova"
     },
     "ME": {
       "zoneName": "Montenegro"
